# Transfer-Function-Visualizer

./: CMakeLists.txt  README.md
include/: mainwindow.h  transmitancje.h
src/: Simulink.code-workspace  main.cpp  mainwindow.cpp  transmitancje.cpp
